--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <base href="safari/">
     <script id="DC_baseScript">if(navigator.userAgent.indexOf('AppleWebKit/') == -1) document.write('<base href="' + location.protocol + '//' + location.host + location.pathname.replace(/\/[^\/]*$/, '/safari/') + '"/>')</script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-language" content="fr">
     <link rel="stylesheet" href="main.css">
     <link href="http://fonts.googleapis.com/css?family=Lobster&amp;v2" rel="stylesheet" type="text/css">
     <link rel="icon" href="Images/Favicon.ico" sizes="32x32 16x16">
@@ -48,6 +49,13 @@
                             <div id="icon_toolslink" onclick="gotools(event)"><img src="../Images/tools.png" id="inner_image13"></div>
                         </div></div></div>
             </div></div>
+        <div id="box">
+            <div class="addthis_toolbox addthis_default_style">
+                <a class="addthis_counter addthis_pill_style"></a>
+            </div>
+            <script type="text/javascript">var addthis_config = {"data_track_clickback":true,"data_track_addressbar":true};</script>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e2f28691fa7918a"></script>
+        </div>
     </div>
     <div id="main">
         <div id="main_stackLayout"><div id="intro">
