--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.6">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.6, minimum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="YES">
     <link rel="apple-touch-icon" href="Images/WebClipIcon.png">
     <link rel="stylesheet" href="main.css">
