--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="fr">
     <link rel="stylesheet" href="main.css">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&amp;v2" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lobster+Two&amp;v2" rel="stylesheet" type="text/css">
     <link rel="icon" href="Images/Favicon.ico" sizes="32x32 16x16">
     <link rel="stylesheet" type="text/css" href="../Parts/Transitions.css">
     <link rel="stylesheet" type="text/css" href="../Parts/ActivityIndicator.css">
