--- a/chat/index.html
+++ b/chat/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <section class="welcome">
-        <h1>Bienvenus!</h1>
+        <h1 style="text-align: center;">Bienvenue!</h1>
         <p>Merci de renseigner votre pseudo et votre email ci-dessous</p>
+        <p><em>L'email sert à afficher votre <a href="http://fr.gravatar.com/">gravatar</a></em></p>
         <form>
             <label for="nickName">Pseudo</label>
             <input name="nickName" required /><br />
