--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../Parts/redirector.js"></script>
     <script type="text/javascript" src="Parts/parts.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
 </head>
 <body onload="load();">
     <div id="header">
@@ -41,11 +42,9 @@
                 </div>
             </div><div id="home">
                 <div id="columns_home">
-                    <div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 33%; " id="div12"><div id="homelink">
-                            <div id="icon_homelink" onclick="gohome(event)"><img src="../Images/Home.png" id="inner_image4"></div>
-                        </div></div><div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 33%; " id="div13"><div id="toolslink">
+                    <div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 50%; " id="div13"><div id="toolslink">
                             <div id="icon_chatlink" onclick="gochat(event)"><img src="../Images/chat.png" id="inner_image12"></div>
-                        </div></div><div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 33%; " id="div14"><div id="chatlink">
+                        </div></div><div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 50%; " id="div14"><div id="chatlink">
                             <div id="icon_toolslink" onclick="gotools(event)"><img src="../Images/tools.png" id="inner_image13"></div>
                         </div></div></div>
             </div></div>
@@ -59,6 +58,7 @@
     </div>
     <div id="main">
         <div id="main_stackLayout"><div id="intro">
+                <noscript>Pour accéder à toutes les fonctionnalités de ce site, vous devez activer JavaScript. Voici les &lt;a href="http://www.enable-javascript.com/fr/" target="_blank"&gt;instructions pour activer JavaScript dans votre navigateur Web&lt;/a&gt;.</noscript>
                 <div id="columns_intro">
                     <div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 50%; " id="div4"><div id="column_buoy">
                             <div id="image_buoy"><img src="../Images/buoy.png" id="inner_image5"></div>
