--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <title></title>
+    <title>SosOnline</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.6, minimum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="YES">
-    <link rel="apple-touch-icon" href="Images/WebClipIcon.png">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" href="Images/WebClipIcon.png">
     <script type="text/javascript" src="Parts/parts.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
 </head>
 <body onload="load();">
-    <div id="content"></div>
+    <div id="content">
+        <div id="div"></div>
+    </div>
     <div id="footer"></div>
 </body>
 </html>
