--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="fr">
     <link rel="stylesheet" href="main.css">
-    <link href="http://fonts.googleapis.com/css?family=Lobster+Two&amp;v2" rel="stylesheet" type="text/css">
     <link rel="icon" href="Images/Favicon.ico" sizes="32x32 16x16">
     <link rel="stylesheet" type="text/css" href="../Parts/Transitions.css">
     <link rel="stylesheet" type="text/css" href="../Parts/ActivityIndicator.css">
+    <link href="http://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="../Parts/redirector.js"></script>
     <script type="text/javascript" src="Parts/parts.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
     <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 </head>
 <body onload="load();">
     <div id="header">
-        <noscript style="color:#FFF">Pour accéder à toutes les fonctionnalités de ce site, vous devez activer JavaScript.Voici les &amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;lt;a href="http://www.enable-javascript.com/fr/" target="_blank" style="color:#FFF"&amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;gt;instructions pour activer JavaScript dans votre navigateur Web&amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;lt;/a&amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;gt;.</noscript>
         <div id="fade"></div>
         <div id="title"></div>
         <div id="slogan"></div>
         <div id="beta" onmouseover="fadein(event)" onmouseout="fadeout(event)" onclick="gocontact(event)"></div>
+        <noscript id="noscript"> Pour accéder à toutes les fonctionnalités de ce site, vous devez activer JavaScript. Voici les instructions pour activer JavaScript dans votre navigateur Web: http://www.enable-javascript.com/fr/</noscript>
         <div id="header_stackLayout"><div id="status">
                 <div id="statuslight"></div>
                 <div id="colums_lights">
