--- a/chat/index.html
+++ b/chat/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Messagerie</title>
     <link href="style.css" type="text/css" rel="stylesheet" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/underscore.js"></script>
     <script type="text/javascript" src="js/backbone.js"></script>
     <script type="text/javascript" src="js/chatapp.js"></script>
