--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,7 @@
 	<title>Contact</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="form.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script src="scripts/validation.js"></script>
 	<script src="scripts/form.js"></script>
 	<script src="scripts/index.js"></script>
