--- a/index.html
+++ b/index.html
@@ -101,14 +101,23 @@
                 </div>
             </div><div id="tools">
                 <div id="text_tut7"></div>
-                <div style="position:relative; width:234px; height:60px;" id="div11">
-                    <a href="http://www.teamviewer.com/link/?url=505374&amp;id=1298671613" style="text-decoration:none;">
-                        <img src="http://www.teamviewer.com/link/?url=985962&id=1298671613" alt="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" title="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" border="0" width="234" height="60">
-                        <span style="position:absolute; top:30.5px; left:60px; display:block; cursor:pointer; color:#424242; font-family:Arial; font-size:12px; line-height:1.2em; font-weight:bold; text-align:center; width:169px;">
-                            Télécharger QuickSupport
-                        </span>
-                    </a>
-                </div>
+                <div id="columnLayout">
+                    <div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 184px; " id="div11"><div id="mac"><div style="position: relative; height: 60px; width: 120px; " id="div18">
+                                <a href="http://www.teamviewer.com/download/TeamViewerQS.dmg" style="text-decoration:none;">
+                                    <img src="http://www.teamviewer.com/link/?url=426717&id=54153469" alt="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" title="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" border="0" width="120" height="60" id="img1">
+                                    <span style="position: absolute; top: 25.5px; left: 50px; display: block; cursor: pointer; color: rgb(66, 66, 66); font-family: 'Lobster Two'; line-height: 1.2em; font-weight: bold; text-align: center; width: 65px; font-size: 20px; " id="span">Mac</span>
+                                </a>
+                            </div></div></div><div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 221px; " id="div16"><div id="pc"><div style="position: relative; height: 60px; width: 120px; " id="div17">
+                                <a href="http://www.teamviewer.com/download/TeamViewerQS_fr.exe" style="text-decoration:none;">
+                                    <img src="http://www.teamviewer.com/link/?url=426717&id=54153469" alt="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" title="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" border="0" width="120" height="60" id="img">
+                                    <span style="position: absolute; top: 25.5px; left: 50px; display: block; cursor: pointer; color: rgb(66, 66, 66); font-family: 'Lobster Two'; line-height: 1.2em; font-weight: bold; text-align: center; width: 65px; font-size: 20px; " id="span1">Pc</span>
+                                </a>
+                            </div></div></div><div style="position: relative; display: table-cell; vertical-align: top; height: auto; width: 30%; " id="div15"><div id="linux"><div style="position: relative; height: 60px; width: 120px; " id="div19">
+                                <a href="http://www.teamviewer.com/fr/download/index.aspx#downloadAreaLinux" style="text-decoration:none;">
+                                    <img src="http://www.teamviewer.com/link/?url=426717&id=54153469" alt="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" title="Accès à distance et Télé-assistance sur Internet grâce à TeamViewer" border="0" width="120" height="60" id="img2">
+                                    <span style="position: absolute; top: 25.5px; left: 50px; display: block; cursor: pointer; color: rgb(66, 66, 66); font-family: 'Lobster Two'; line-height: 1.2em; font-weight: bold; text-align: center; width: 65px; font-size: 20px; " id="span2">Linux</span>
+                                </a>
+                            </div></div></div></div>
             </div><div id="motivation">
                 <div id="text_motiv"></div>
                 <div id="paypalbutton"><form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="form">
