--- a/index.html
+++ b/index.html
@@ -15,33 +15,12 @@
     <script type="text/javascript" src="../Parts/redirector.js"></script>
     <script type="text/javascript" src="Parts/parts.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 </head>
 <body onload="load();">
     <div id="header">
         <div id="fade"></div>
-        <div id="box">
-            <div class="scroll">
-                <div class="demo">
-                    <div class="shareme">
-                        <span class="sharecount">Love</span>
-                        <ul>
-                            <li class="first">
-                                <a href="https://twitter.com/share?url=https%3A%2F%2Fdandypixels.com/sharecount"><img src="Images/twitter.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li>
-                                <a href="http://www.facebook.com/share.php?u=http%3A%2F%2Fdandypixels.com/sharecount&amp;t=Sharecount+JS%3A+customise+your+share+counters"><img src="Images/facebook.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li>
-                                <a href="http://digg.com/submit?url=http%3A//dandypixels.com/sharecount"><img src="Images/digg.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li class="last">
-                                <a href="http://www.delicious.com/save" onclick="window.open('http://www.delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;"><img src="Images/delicious.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div id="title"></div>
         <div id="slogan"></div>
         <div id="beta" onmouseover="fadein(event)" onmouseout="fadeout(event)" onclick="gocontact(event)"></div>
@@ -177,10 +156,13 @@
     </div>
     <div id="footer">
         <div id="credits"></div>
+        <div id="box">
+            <div class="addthis_toolbox addthis_default_style" id="div12">
+                <a class="addthis_counter addthis_pill_style" id="a"></a>
+            </div>
+            <script type="text/javascript" id="script">var addthis_config = {"data_track_clickback":true,"data_track_addressbar":true};</script>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e2f28691fa7918a" id="script1"></script>
+        </div>
     </div>
-    <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/safari/sharecount.js"></script>
-    <script type="text/javascript" src="/safari/roll.js"></script>
 </body>
 </html>
