--- a/index.html
+++ b/index.html
@@ -20,25 +20,23 @@
     <div id="header">
         <div id="fade"></div>
         <div id="box">
-            <div class="scroll">
-                <div class="demo">
-                    <div class="shareme">
-                        <span class="sharecount">Love</span>
-                        <ul>
-                            <li class="first">
-                                <a href="https://twitter.com/share?url=https%3A%2F%2Fdandypixels.com/sharecount"><img src="Images/twitter.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li>
-                                <a href="http://www.facebook.com/share.php?u=http%3A%2F%2Fdandypixels.com/sharecount&amp;t=Sharecount+JS%3A+customise+your+share+counters"><img src="Images/facebook.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li>
-                                <a href="http://digg.com/submit?url=http%3A//dandypixels.com/sharecount"><img src="Images/digg.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                            <li class="last">
-                                <a href="http://www.delicious.com/save" onclick="window.open('http://www.delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;"><img src="Images/delicious.png" alt="share counter title" width="16" height="16"></a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="demo">
+                <div class="shareme">
+                    <span class="sharecount">Love</span>
+                    <ul>
+                        <li class="first">
+                            <a href="https://twitter.com/share?url=https%3A%2F%2Fdandypixels.com/sharecount"><img src="Images/twitter.png" alt="Twitter" width="16" height="16"></a>
+                        </li>
+                        <li>
+                            <a href="http://www.facebook.com/share.php?u=http%3A%2F%2Fdandypixels.com/sharecount&amp;t=Sharecount+JS%3A+customise+your+share+counters"><img src="Images/facebook.png" alt="Facebook" width="16" height="16"></a>
+                        </li>
+                        <li>
+                            <a href="http://digg.com/submit?url=http%3A//dandypixels.com/sharecount"><img src="Images/digg.png" alt="Digg" width="16" height="16"></a>
+                        </li>
+                        <li class="last">
+                            <a href="http://www.delicious.com/save" onclick="window.open('http://www.delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;"><img src="Images/delicious.png" alt="Delicious" width="16" height="16"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
