--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="content-language" content="fr">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Images/Favicon.ico" sizes="32x32 16x16">
+    <link rel="image_src" href="Images/buoy.png">
     <link rel="stylesheet" type="text/css" href="../Parts/Transitions.css">
     <link rel="stylesheet" type="text/css" href="../Parts/ActivityIndicator.css">
     <link href="http://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet" type="text/css">
@@ -26,13 +27,13 @@
                     <span class="sharecount">Love</span>
                     <ul>
                         <li class="first">
-                            <a href="https://twitter.com/share?url=https%3A%2F%2Fdandypixels.com/sharecount"><img src="Images/twitter.png" alt="Twitter" width="16" height="16"></a>
+                            <a href="https://twitter.com/share?url=http://sosonline.alwaysdata.net"><img src="Images/twitter.png" alt="Twitter" width="16" height="16"></a>
                         </li>
                         <li>
-                            <a href="http://www.facebook.com/share.php?u=http%3A%2F%2Fdandypixels.com/sharecount&amp;t=Sharecount+JS%3A+customise+your+share+counters"><img src="Images/facebook.png" alt="Facebook" width="16" height="16"></a>
+                            <a href="http://www.facebook.com/share.php?u=http://sosonline.alwaysdata.net"><img src="Images/facebook.png" alt="Facebook" width="16" height="16"></a>
                         </li>
                         <li>
-                            <a href="http://digg.com/submit?url=http%3A//dandypixels.com/sharecount"><img src="Images/digg.png" alt="Digg" width="16" height="16"></a>
+                            <a href="http://digg.com/submit?url=http://sosonline.alwaysdata.net"><img src="Images/digg.png" alt="Digg" width="16" height="16"></a>
                         </li>
                         <li class="last">
                             <a href="http://www.delicious.com/save" onclick="window.open('http://www.delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;"><img src="Images/delicious.png" alt="Delicious" width="16" height="16"></a>
