--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="content-language" content="fr">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Images/Favicon.ico" sizes="32x32 16x16">
-    <link rel="image_src" href="Images/buoy.png">
+    <meta property="og:image" content="Images/buoy.png">
     <link rel="stylesheet" type="text/css" href="../Parts/Transitions.css">
     <link rel="stylesheet" type="text/css" href="../Parts/ActivityIndicator.css">
     <link href="http://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet" type="text/css">
